tools/k8s/dev/blockchain/contracts.k8s-service.yaml
# Which API version to use
# https://matthewpalmer.net/kubernetes-app-developer/articles/kubernetes-apiversion-definition-guide.html
apiVersion: v1
kind: Service
metadata:
  name: contracts
  labels:
    component: contracts
    tier: backend
spec:
  selector:
    component: contracts
    tier: backend
  ports:
    - port: 8545
      targetPort: 8545
