tools/k8s/dev/blockchain/blockchain-watcher.k8s-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-blockchain-watcher
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: 'false'
spec:
  rules:
    - host: blockchain-watcher.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: blockchain-watcher
                port:
                  number: 4000
