tools/k8s/dev/blockchain/contracts.k8s-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-contracts
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: 'false'
spec:
  rules:
    - host: contracts.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: contracts
                port:
                  number: 8545
